# notion-pilot

./: .brain-project  .dockerignore  .env.bootstrap.example  .env.example  .gitignore  .infisical.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EMAIL_PROCESSING_TUTORIAL.md  Makefile  README.md  docker-compose.yml  infisical.json  launch_webserver.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/brain/: API.md  ARCHITECTURE.md  CONTEXT.md  DECISIONS.md  OBJECTIVES.md  ROADMAP.md  settings.json
.claude/memory/: API.md  ARCHITECTURE.md  CONTEXT.md  DECISIONS.md  DESIGN.md  OBJECTIVES.md  ROADMAP.md  settings.json
.cursor/: mcp.json
.cursor/skills/: company-open-data-enrichment  notion-crm-ops
.github/workflows/: ci.yml  deploy.yml
config/: README.md  email-senders.yaml  scripts.yaml
docker/: Dockerfile.bot  Dockerfile.web
examples/: example.py  example_email.py
notion_pilot/: __init__.py  __main__.py  _version.py  bot.py  models.py  notion.py
notion_pilot/adapters/: __init__.py  discord.py  email.py  telegram.py
notion_pilot/crm/: __init__.py  activities.py  commands.py  contact_parse.py  conv_state.py  deals.py  prospection.py  queries.py  recap.py  setup_wizard.py  syncer.py
notion_pilot/inbox/: __init__.py  knowledge.py  people.py  pipeline.py
notion_pilot/llm/: openrouter.py  prompt.py
notion_pilot/mcp/: models.py  server.py  session.py  tools.py
notion_pilot/media/: __init__.py  base.py  img.py  voice.py
notion_pilot/pipelines/: __init__.py  knowledge.py  people.py  pipeline.py
notion_pilot/shared/: __init__.py  _version.py  config.py  models.py  notion.py  prosper_client.py  siren_lookup.py  workspace.py
notion_pilot/shared/adapters/: __init__.py  discord.py  email.py  telegram.py
notion_pilot/shared/llm/: crm_chat.py  link_metadata.py  openrouter.py  prompt.py  synthesis.py
notion_pilot/shared/media/: __init__.py  base.py  img.py  transcribe_voice.py  voice.py
notion_pilot/shared/utils/: dedup.py  enrichment.py  notion_urls.py
notion_pilot/utils/: enrichment.py
scripts/: _create_deals_db.py  crm_dedup.py  crm_enrich.py  crm_import_linkedin.py  crm_prospect.py  crm_setup_properties.py  crm_setup_workspace.py  enrich_crm.py  import_linkedin.py  prospect.py  setup_notion_crm.py
scripts/crm/: NOTION_UI_STEPS.md  crm_add_activity_rollups.py  crm_create_activities_db.py  crm_dedup.py  crm_enrich.py  crm_import_linkedin.py  crm_patch_commercial.py  crm_patch_companies.py  crm_patch_meetings.py  crm_patch_people.py  crm_prospect.py  crm_refresh_companies.py  crm_refresh_people.py  crm_setup_deals_db.py  crm_setup_properties.py  crm_setup_workspace.py  crm_sync_meetings_activities.py  dump_leads.py
scripts/inbox/: analyze_email_review.py  analyze_promotions_review.py  enrich_knowledge.py  process_email.py  process_promotions.py  setup_workspace.py
skills/company-open-data-enrichment/: SKILL.md
skills/notion-crm-ops/: SKILL.md
skills/notion-crm-ops/evals/: evals.json
skills/notion-crm-ops/references/: activities.md  companies.md  crm-ids.md  leads.md  people.md
telegram_to_notion/: bot.py  config.py  models.py  notion.py  pipeline.py
telegram_to_notion/adapters/: __init__.py  discord.py  email.py  telegram.py
telegram_to_notion/crm/: __init__.py  commands.py  conv_state.py  deals.py  dedup.py  enrichment.py  prospection.py  syncer.py
telegram_to_notion/pipelines/: __init__.py  knowledge.py  people.py  pipeline.py
telegram_to_notion/utils/: dedup.py  enrichment.py
tests/data/: audio_example_transcript.txt
tests/integration/: conftest.py  test_notion_live.py  test_people_import.py
tests/unit/: conftest.py  test_adapters_email.py  test_email_summary.py  test_infisical_source.py  test_models.py  test_openrouter.py  test_pipeline.py  test_process_email.py  test_promotions_summary.py  test_prompt.py  test_source_hints.py  test_telegram_inference.py  test_telegram_read_commands.py
tests/unit/crm/: test_activities.py  test_commands.py  test_contact_parse.py  test_conv_state.py  test_deals.py  test_dedup.py  test_enrichment.py  test_prospection.py  test_queries.py  test_recap.py  test_setup_wizard.py  test_syncer.py
tests/unit/inbox/: test_knowledge.py  test_people.py
tests/unit/mcp/: test_models.py  test_server.py  test_session.py  test_tools_deals_activities.py  test_tools_dedup.py  test_tools_enrich.py  test_tools_prospection.py  test_tools_reads.py  test_tools_search.py  test_tools_upsert.py
tests/unit/scripts/: test_dump_leads.py
tests/unit/shared/: test_models.py  test_notion.py  test_notion_urls.py  test_prosper_client.py  test_siren_lookup.py  test_workspace.py
tests/unit/utils/: test_dedup.py  test_enrichment.py
tests/unit/web/: test_auth.py  test_cockpit.py  test_oauth.py  test_server.py  test_utils.py
web/: auth.py  config.py  models.py  notion_db.py  oauth.py  server.py  utils.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx
web/static/: cockpit.html  index.html
web/static/assets/: index-B5KUXYxu.js  index-BBXGGWvz.js  (+16 more)
(+23 files in other folders)
