[project]
name = "notion-pilot"
dynamic = ["version"]
description = "Self-hosted Notion automation platform — CRM and knowledge inbox, piloted by Telegram"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Louis Giron", email = "louis@giron-dom.eu" }]
readme = "README.md"
dependencies = [
    "python-telegram-bot>=21.0",
    "notion-client>=2.2.1",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "infisicalsdk>=1.0.3",
    "faster-whisper>=1.2.1",
    "rapidfuzz>=3.14.5",
    "uvicorn>=0.48.0",
    "imapclient>=3.1.0",
    "discord-py>=2.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "pyyaml>=6.0",
    "pandas>=3.0.3",
]

[project.optional-dependencies]
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pylint>=4.0.5",
    "ipykernel>=7.2.0",
    "fastapi>=0.115.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "respx>=0.23.1",
    "itsdangerous>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["notion_pilot"]

# Version comes from the latest git tag (e.g. `v0.3.0` → `0.3.0`).
# Between tags hatch-vcs emits a PEP 440 post-release string.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "notion_pilot/shared/_version.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: uses real external APIs (requires repo .env)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["notion_pilot/shared/_version.py"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "faster_whisper"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["imapclient", "imapclient.imapclient"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["discord", "notion_pilot.shared.adapters.discord"]
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "infisical_sdk"
ignore_missing_imports = true

[tool.pylint.master]
# Optional dependencies not installed in the CI environment
ignored-modules = ["discord", "imapclient", "imapclient.imapclient"]

[tool.pylint.messages_control]
disable = [
    "C0415",  # import-outside-toplevel: intentional lazy imports for optional deps
    "R0903",  # too-few-public-methods: Protocol classes have few methods by design
    "W0718",  # broad-exception-caught: intentional catch-all in adapter error handlers
]
